# app/Http/Controllers/ScheduleController.php
@@ -7,23 +7,33 @@ use App\Http\Resources\ScheduleResource;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use App\Models\Schedule;
+use App\Http\Services\ScheduleService;
+use App\Http\Requests\BookScheduleRequest;
 
 class ScheduleController extends Controller
 {
+    protected $scheduleService;
+
+    public function __construct(ScheduleService $scheduleService)
+    {
+        $this->scheduleService = $scheduleService;
+    }
     /**
      * @OA\Get(
      *     path="/schedules",
-     *     summary="Get schedules list with filters",
+     *     summary="Get available schedules for user",
      *     security={ {"bearerAuth" : {}}},
      *     tags={"Schedules"},
      *     @OA\Response(response=200,description="Return filtered schedule list"),
-     *     @OA\Response(response=422, description="Unprocessable entity!"),
+     *     @OA\Response(response=401,description="Unatuhorized"),
      *     @OA\Response(response=500, description="Internal server error!")
      * )
      */
-    public function index() : JsonResponse {
+    public function index() : JsonResponse
+    {
         $userRole = auth()->user()->roleName;
-        return $this->ok(ScheduleResource::collection(Schedule::availableForUser($userRole)->whereNull('user_id')->get()));
+
+        return $this->ok(ScheduleResource::collection($this->scheduleService->list($userRole)));
     }
     /**
      * @OA\Post(
@@ -36,25 +46,24 @@ class ScheduleController extends Controller
      *     @OA\Response(response=500, description="Internal server error!")
      * )
      */
-    public function create(Request $request)
+    public function book(BookScheduleRequest $request)
     {
-        $userId = auth()->id();
-        $serviceId = $request->service_id;
-        $from = $request->from;
-        $to = $request->to;
+        $data = $request->only('service_id', 'from');
 
-        $isAvailable = !Schedule::where('service_id', $serviceId)->where(function ($query) use ($from, $to) {
-            $query->whereBetween('from', [$from, $to])
-                  ->orWhereBetween('to', [$from, $to]);
-        })->exists();
+        return $this->ok($this->scheduleService->bookSchedule($data));
+    }
 
-        Schedule::create([
-            'user_id' => $userId,
-            'service_id' => $serviceId,
-            'from' => $from,
-            'to' => $to,
-        ]);
+    public function cancel(Schedule $schedule)
+    {
+        $this->scheduleService->cancelSchedule($schedule);
 
-        return $userId;
+        return $this->noContent();
+    }
+
+    public function reschedule(Request $request, Schedule $schedule)
+    {
+        $data = $request->only('new_from', 'from');
+
+        return $this->ok($this->scheduleService->reschedule($data, $schedule));
     }
 }
